

ADD_SUBDIRECTORY (triangle)
#ADD_SUBDIRECTORY (triangle_cube)
ADD_SUBDIRECTORY (rectangle)
ADD_SUBDIRECTORY (texture)
ADD_SUBDIRECTORY (blending)
ADD_SUBDIRECTORY (caustics)
ADD_SUBDIRECTORY (model_am)
ADD_SUBDIRECTORY (mii)
ADD_SUBDIRECTORY (flag)
ADD_SUBDIRECTORY (sea)
ADD_SUBDIRECTORY (3dclock)
ADD_SUBDIRECTORY (round_cube)
ADD_SUBDIRECTORY (quad)
ADD_SUBDIRECTORY (mmi)
ADD_SUBDIRECTORY (font)
ADD_SUBDIRECTORY (carclock)
ADD_SUBDIRECTORY (skydome)
ADD_SUBDIRECTORY (camera)
ADD_SUBDIRECTORY (map)

